fix: scrollbar in light mode.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -95,6 +95,12 @@ body {
     background: #1f1f1f;
   }
 
+  @media (prefers-color-scheme: light) {
+    .floating-scrollbar:hover::-webkit-scrollbar-thumb {
+      background: transparent;
+    }
+  }
+
   /* Firefox */
   .floating-scrollbar {
     scrollbar-width: thin;
@@ -102,6 +108,6 @@ body {
   }
 
   .floating-scrollbar:hover {
-    scrollbar-color: #1f1f1f #1f1f1f;
+    /* scrollbar-color: #1f1f1f #1f1f1f; */
   }
 }
